[package]
name = "tp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12", features = ["blocking", "json"]}
anyhow = "=1.0.64"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
chrono = "0.4.22"
clap = {version = "4.0.15", features = ["derive"]}